[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/cardbackmockup.png" type="Texture" id=1]
[ext_resource path="res://Assets/DotGothic16-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main/EnemyDeck.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="EnemyDeck" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckCountLabel" type="Label" parent="."]
visible = false
margin_left = 4.0
margin_top = -25.0
margin_right = 44.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 1, 0.878431, 1 )
custom_fonts/font = SubResource( 1 )
text = "TEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_EnemyDeck_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EnemyDeck_mouse_exited"]
